--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                                 <li><a href="#intro" style="font-size: 1.6em; font-weight: 700;">Thân Mời</a></li>
                                 <li><a href="#eng-pics" style="font-size: 1.6em; font-weight: 700;">Khoảnh Khắc</a>
                                 </li>
-                                <li><a href="#events" style="font-size: 1.6em; font-weight: 700;">Lịch Trình</a></li>
+                                <li><a href="#events" style="font-size: 1.6em; font-weight: 700;">Thời Gian</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -219,7 +219,7 @@
     </section>
     <section class="events section-padding" id="events">
         <div class="container">
-            <h3 class="header">Lễ Đính Hôn và Tiệc thân mật</h3>
+            <h2 class="header"> Thời Gian </h3>
             <div class="event-content-wrapper">
                 <div class="wp3 event-item">
                     <p class="event-date"><strong>12/07</strong></p>
