--- a/index.html
+++ b/index.html
@@ -219,20 +219,21 @@
     </section>
     <section class="events section-padding" id="events">
         <div class="container">
-            <h2 class="header"> Thời Gian </h3>
-            <div class="event-content-wrapper">
-                <div class="wp3 event-item">
-                    <p class="event-date"><strong>12/07</strong></p>
-                    <h5 class="event-title">Lễ Đính Hôn<span class="time"> 7AM </span></h5>
-                    <p class="event-description">Lễ đính hôn được cử hành vào lúc 9h00 sáng ngày 12 tháng 7 năm 2025 tại
-                        tư gia nhà gái</p>
+            <h2 class="header"> Được Tổ Chức </h3>
+                <div class="event-content-wrapper">
+                    <div class="wp3 event-item">
+                        <p class="event-date"><strong>12/07</strong></p>
+                        <h5 class="event-title">Lễ Đính Hôn<span class="time"> 7:00 AM </span></h5>
+                        <p class="event-description">Lễ đính hôn được cử hành <br>
+                            vào lúc 7:00 sáng ngày 12/07/2025 tại tư gia nhà gái.</p>
+                    </div>
+                    <div class="wp5 event-item">
+                        <h5 class="event-title">Tiệc chiêu đãi<span class="time"> 11:00 AM </span></h5>
+                        <p class="event-description">Sau lễ đính hôn, kính mời các bạn cùng ở lại dùng bữa tiệc thân mật
+                            để
+                            chung vui với hai đứa mình tại nhà Thảo vào lúc 11:00.</p>
+                    </div>
                 </div>
-                <div class="wp5 event-item">
-                    <h5 class="event-title">Tiệc chiêu đãi<span class="time"> 11AM </span></h5>
-                    <p class="event-description">Sau lễ đám hỏi, kính mời các bạn cùng ở lại dùng bữa tiệc thân mật để
-                        chung vui với hai đứa mình tại nhà Thảo vào lúc 11h.</p>
-                </div>
-            </div>
         </div>
     </section>
     <style>
