--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Phú - Thao!</title>
+    <title>Phú - Thảo!</title>
     <meta name="description" content="We would like to invite you to our big day.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#ffffff">
     <meta property="og:title" content="Ram & Antara getting hitched">
     <meta property="og:description" content="We would like to invite you to our big day.">
-    <meta property="og:image" content="img/hero-min.jpg">
+    <meta property="og:image" content="https://drive.google.com/file/d/16C127Wu5UB0CeWUsx1K75g-uNwjouHRH/view?usp=sharing">
     <meta property="og:type" content="website">
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
