--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <meta name="theme-color" content="#ffffff">
     <meta property="og:title" content="Ram & Antara getting hitched">
     <meta property="og:description" content="We would like to invite you to our big day.">
-    <meta property="og:image" content="https://drive.google.com/file/d/16C127Wu5UB0CeWUsx1K75g-uNwjouHRH/view?usp=sharing">
+    <meta property="og:image"
+        content="https://drive.google.com/file/d/16C127Wu5UB0CeWUsx1K75g-uNwjouHRH/view?usp=sharing">
     <meta property="og:type" content="website">
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
@@ -117,20 +118,22 @@
                 <div class="col-md-3 hidden-sm hidden-xs"><img src="img/IMG_6235.JPG" class="wp1"></div>
                 <div class="col-md-6">
                     <p>
-                        Sau hành trình hơn 2 năm đầy kỉ niệm, sóng gió và tràn ngập tình yêu.<br>
-                        Hai đứa mình mình sẽ chính thức đánh dấu chặng đường mới bằng lễ đám hỏi vào ngày 12/7
-                        tới.<br>
-                        Muốn chia sẻ niềm vui này với những người bạn thân thiết nhất – và không thể thiếu các bạn được
-                        đâu nha! 🥰<br>
+                        Sau hơn 2 năm đồng hành cùng nhau – với đủ mọi kỷ niệm, thử thách và thật nhiều yêu thương,<br>
+                        chúng em/chúng mình sắp bước sang một chặng đường mới, và sẽ chính thức đánh dấu bằng lễ đám hỏi vào ngày
+                        12/7 sắp tới.<br>
 
-                        Không cần chuẩn bị gì nhiều, chỉ mong mọi người tới chung vui, ăn miếng bánh, uống tách trà,
-                        chụp vài tấm hình và ngồi trò chuyện như những ngày tụi mình còn tụ tập mỗi tuần 😄<br>
+                        Chúng em/chúng mình rất mong có thể chia sẻ niềm vui này cùng anh chị, bạn bè – những người đã luôn bên
+                        cạnh, đồng hành và ủng hộ hai đứa trong suốt thời gian qua.<br>
 
-                        Biết ai cũng bận rộn, nhưng thật lòng tụi mình rất mong có sự hiện diện của các bạn trong dịp
-                        đặc biệt này.<br>
+                        Không cần chuẩn bị gì cả, chỉ mong mọi người ghé đến chung vui, ăn miếng bánh, uống ly trà, chụp
+                        vài tấm hình và trò chuyện thân tình – như những lần mình từng tụ họp ngày nào. 😊<br>
 
-                        Nhớ ghé nha! Tụi mình chờ đó!<br>
-                        ❤️ Ký tên: 🐉🐶
+                        Biết rằng ai cũng bận rộn, nhưng chúng em/chúng mình thật lòng rất mong có sự hiện diện của mọi người trong
+                        dịp đặc biệt này.<br>
+
+                        Hẹn gặp nhé – chúng em chờ đó!<br>
+                        Thân mến,<br>
+                        🐉🐶<br>
                     </p>
                 </div>
                 <div class="col-md-3 hidden-sm hidden-xs"><img src="img/IMG_5657.JPG" class="wp2"></div>
