--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                             <ul class="primary-nav"
                                 style="display: flex; justify-content: center; gap: 30px; list-style: none; padding: 0; margin: 0;">
                                 <li><a href="#intro" style="font-size: 1.6em; font-weight: 700;">Thân Mời</a></li>
-                                <li><a href="#eng-pics" style="font-size: 1.6em; font-weight: 700;">Khoảnh Khắc</a>
+                                <li><a href="#eng-pics" style="font-size: 1.6em; font-weight: 700;">❤️</a>
                                 </li>
                                 <li><a href="#events" style="font-size: 1.6em; font-weight: 700;">Thời Gian</a></li>
                             </ul>
@@ -158,7 +158,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-12 text-center">
-                    <h3 class="header">Khoảnh Khắc</h3>
+                    <h3 class="header">❤️</h3>
                 </div>
             </div>
             <div class="row">
@@ -212,64 +212,105 @@
     </section>
     <section id="events">
         <div class="container">
-            <div class="event-content-wrapper">
-                <div class="event-item">
-                    <p class="event-date"><strong>12/07</strong></p>
-                    <h5 class="event-title">Lễ Đính Hôn <span class="time">7:00 AM</span></h5>
-                    <p class="event-description">
-                        <strong>Lễ Đính Hôn</strong> được cử hành vào lúc 7:00 sáng ngày 12/07/2025 tại <strong>Tư Gia
-                            nhà gái</strong>.
-                    </p>
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    <h3 class="header">Thời Gian</h3>
                 </div>
-                <div class="event-item">
-                    <h5 class="event-title">Tiệc Chiêu Đãi <span class="time">11:00 AM</span></h5>
-                    <p class="event-description">
-                        Sau <strong>Lễ Đính Hôn</strong>, kính mời các bạn cùng ở lại dùng <strong>Bữa Tiệc Thân
-                            Mật</strong> tại
-                        <strong>Tư Gia nhà gái</strong> lúc 11:00.
-                    </p>
+            </div>
+            <div class="row">
+                <!-- Ảnh bên trái -->
+                <div class="col-md-3 hidden-sm hidden-xs">
+                    <img src="img/eng_pics/IMG_3814.JPG" class="wp1" style="width: 100%; border-radius: 12px;">
+                </div>
+
+                <!-- Nội dung giữa -->
+                <div class="col-md-6">
+                    <div class="event-item">
+                        <p class="event-date"><strong>12/07</strong></p>
+                        <h5 class="event-title">Lễ Đính Hôn <span class="time">7:00 AM</span></h5>
+                        <p class="event-description">
+                            <strong>Lễ Đính Hôn</strong> được cử hành vào lúc 7:00 sáng ngày 12/07/2025 tại
+                            <strong>Tư Gia nhà gái</strong>.
+                        </p>
+                    </div>
+                    <div class="event-item">
+                        <h5 class="event-title">Tiệc Chiêu Đãi <span class="time">11:00 AM</span></h5>
+                        <p class="event-description">
+                            Sau <strong>Lễ Đính Hôn</strong>, kính mời các bạn cùng ở lại dùng <strong>Bữa Tiệc Thân
+                                Mật</strong> tại
+                            <strong>Tư Gia nhà gái</strong> lúc 11:00.
+                        </p>
+                    </div>
+                </div>
+
+                <!-- Ảnh bên phải -->
+                <div class="col-md-3 hidden-sm hidden-xs">
+                    <img src="img/eng_pics/IMG_3816.JPG" class="wp2" style="width: 100%; border-radius: 12px;">
                 </div>
             </div>
         </div>
     </section>
 
+
+    <section id="event-footer">
+    </section>
+
     <style>
         #events {
-            background: url('img/eng_pics/IMG_3815_resized_1107x1490.jpg') center center;
-            background-size: cover;
-            min-height: 750px;
-            /* giống .hero */
-            position: relative;
+            background: #fff;
             padding: 100px 0;
-            color: #fff;
-            /* nếu text trắng nhìn rõ hơn */
-            z-index: 1;
-
+            color: #000;
         }
 
-        /* Xóa lớp phủ đậm nếu đang có */
-        #events::before {
-            display: none;
-        }
-
-        /* Làm box trong suốt nhẹ */
         #events .event-item {
-            background-color: rgba(255, 255, 255, 0.85);
-            /* trắng nhẹ, không che nền quá nhiều */
+            background-color: rgba(255, 255, 255, 0.95);
             border-radius: 16px;
             padding: 30px;
-            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.08);
             margin-bottom: 30px;
         }
 
-        /* Đảm bảo nội dung không dính nền tối */
-        #events .container {
-            position: relative;
-            z-index: 2;
-            background: transparent;
-            padding: 0 15px;
+        #events .event-date {
+            font-size: 1.4em;
+            margin-bottom: 8px;
         }
 
+        #events .event-title {
+            font-size: 1.3em;
+            font-weight: bold;
+            margin-bottom: 5px;
+        }
+
+        #events .event-description {
+            font-size: 1.1em;
+            line-height: 1.6;
+        }
+
+        /* Footer hình ảnh */
+        #event-footer {
+            min-height: 750px;
+            background: url('img/eng_pics/IMG_3815_resized_1107x1490.jpg') center center no-repeat;
+            background-size: cover;
+            position: relative;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+        }
+
+        /* Overlay chữ trên nền hình */
+        .footer-overlay {
+            background-color: rgba(0, 0, 0, 0.4);
+            padding: 60px 20px;
+            width: 100%;
+        }
+
+        .footer-thank {
+            font-size: 2em;
+            color: #fff;
+            font-weight: 500;
+            margin: 0;
+        }
 
         .slider-container {
             position: relative;
