--- a/index.html
+++ b/index.html
@@ -256,6 +256,10 @@
     </section>
 
     <style>
+        html {
+            scroll-behavior: smooth;
+        }
+
         #events {
             background: #fff;
             padding: 100px 0;
@@ -289,7 +293,7 @@
         /* Footer hình ảnh */
         #event-footer {
             min-height: 750px;
-            background: url('img/eng_pics/IMG_3815_resized_1107x1490.jpg') center center no-repeat;
+            background: url('img/eng_pics/IMG_3815.jpg') center center no-repeat;
             background-size: cover;
             position: relative;
             display: flex;
@@ -735,6 +739,17 @@
             </div>
         </div>
     </footer>
+    <script>
+        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+            anchor.addEventListener("click", function (e) {
+                e.preventDefault();
+                const target = document.querySelector(this.getAttribute("href"));
+                if (target) {
+                    target.scrollIntoView({ behavior: "smooth" });
+                }
+            });
+        });
+    </script>
     <script src="js/vendor/jquery-1.11.2.min.js" onerror="loadJsFromCDN('jquery.js')"></script>
     <script src="node_modules/waypoints/lib/jquery.waypoints.min.js" onerror="loadJsFromCDN('waypoints.js')"></script>
     <script src="js/jquery.fancybox.pack.js"></script>
